k8s/applications/apigateway/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apigateway-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  #    nginx.ingress.kubernetes.io/rewrite-target: /
  #    ingressclass.kubernetes.io/is-default-class: "true"
  labels:
    env: development
    tier: backend
    app: apigateway
spec:
  rules:
    - host: plog.site # 구매한 도메인
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apigateway # apigateway 서비스 이름
                port:
                  number: 8000 # apigateway 서비스의 포트 번호
